--- a/day 5/index.html
+++ b/day 5/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <div class="bg"></div>
+    <div class="loading-text">0%</div>
     <script src="script.js">
     </script>
 </body>
