--- a/day 6/index.html
+++ b/day 6/index.html
@@ -5,14 +5,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scroll animation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>project starter</h1>
+    <h1>Scroll to see the animation</h1>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+    <div class="box">
+        <h2>Content</h2>
+    </div>
+
     <script src="script.js">
     </script>
 </body>
