icon styling active & toggle

--- a/day 10/index.html
+++ b/day 10/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="active">
+    <nav class="active" id="nav">
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">Works</a></li>
